--- a/source/_posts/数据绑定.md
+++ b/source/_posts/数据绑定.md
@@ -25,6 +25,7 @@ categories: javascript
 <body>
     <input type="text" id="input" s-value="value">
     <span id="el" s-text="value"></span>
+```
 
 ```js
     <script>
@@ -62,6 +63,7 @@ categories: javascript
     </script>
 ```    
 
+```html
 </body>
 </html>
 ```
