--- a/source/_posts/移动端1物理像素.md
+++ b/source/_posts/移动端1物理像素.md
@@ -80,3 +80,16 @@ border-none()
   &:after
     display: none
 ```
+
+4. 组件内部
+```css
+<style lang="stylus" scoped>
+@import '~common/stylus/mixin'
+.food-item
+  display: flex
+  margin: 18px
+  padding-bottom: 18px
+  border-1px(rgba(7, 17, 27, 0.1))
+
+</style>
+```
